--- a/deployment.yml
+++ b/deployment.yml
@@ -1,5 +1,5 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: kubeserve
 spec:
@@ -31,7 +31,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
+    - targetPort: 80
+      port: 80
+      nodePort: 20001
   selector:
     app: kubeserve
