--- a/deployment.yml
+++ b/deployment.yml
@@ -21,7 +21,9 @@ spec:
     spec:
       containers:
        - name: app
-         image: leaddevops/kubeserve:v1
+         image: nginx
+
+         #image: leaddevops/kubeserve:v1
 
 ---
 kind: Service
